// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`tasks-add-multiple tool adding multiple tasks should add multiple tasks and return mapped results 1`] = `
"Added 2 tasks to specified project.
Tasks:
    First task content • P1 • id=8485093748
    Second task content • due 2025-08-15 • P2 • id=8485093749.
Next:
- Use overview to see your updated project organization"
`;

exports[`tasks-add-multiple tool adding multiple tasks should add tasks with duration 1`] = `
"Added 2 tasks to specified project.
Tasks:
    Task with 2 hour duration • P1 • id=8485093752
    Task with 45 minute duration • P1 • id=8485093753.
Next:
- Use overview to see your updated project organization"
`;

exports[`tasks-add-multiple tool adding multiple tasks should handle tasks with section and parent IDs 1`] = `
"Added 1 task to specified project.
Tasks:
    Subtask content • P3 • id=8485093750.
Next:
- Use overview to see your updated project organization"
`;

exports[`tasks-add-multiple tool next steps logic should suggest overview tool when no hasToday context 1`] = `
"Added 1 task to specified project.
Tasks:
    Regular task • P1 • id=8485093756.
Next:
- Use overview to see your updated project organization"
`;

exports[`tasks-add-multiple tool next steps logic should suggest tasks-list-by-date for today when hasToday is true 1`] = `
"Added 1 task.
Tasks:
    Task due today • due 2025-08-17 • P1 • id=8485093755.
Next:
- Use overview to see your updated project organization"
`;
